--- a/chatroom/package.json
+++ b/chatroom/package.json
@@ -6,7 +6,10 @@
     "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
     "socket.io": "^2.1.1"
   },
   "scripts": {
